--- a/application.yml
+++ b/application.yml
@@ -138,7 +138,7 @@ workshop:
       -
         id: "circuit-breakers"
       -
-        id: "scs"
+        id: "datamicroservices"
         title: "Data Microservices"
       -
         id: "springcloud-dataflow"
