--- a/application.yml
+++ b/application.yml
@@ -137,3 +137,8 @@ workshop:
         id: "service-discovery"
       -
         id: "circuit-breakers"
+      -
+        id: "datamicroservices"
+        title: "Data Microservices"
+      -
+        id: "springcloud-dataflow"
