--- a/application.yml
+++ b/application.yml
@@ -1,5 +1,5 @@
 config:
-  name: cjdname
+  name: dellemc
 foo: bar
 fortune:
   messages:
@@ -60,9 +60,9 @@ workshop:
         content: "content 4 link"
   sessions:
     -
-      id: "day1"
-      name: "Day 1"
-      description: "Content for September, 8"
+      id: "workshop"
+      name: "Workshop Sessions"
+      description: "Content for one-day workshop December 12, 2016"
       topics:
       -
         id: "session1"
@@ -122,37 +122,3 @@ workshop:
       -
         id: "emptysession"
         title: "COTS / ERP / Packaged Software"
-    -
-      id: "day2"
-      name: "Day 2"
-      description: "Content for September, 9"
-      topics:
-      -
-        id: "session1"
-        title: "Application Development"
-      -
-        id: "04-cli"
-      -
-        id: "08-deploy-simple-app"
-      -
-        id: "06-org-space-user-role"
-      -
-        id: "10-application-manifest"
-      -
-        id: "12-domains-and-routes"
-      -
-        id: "springboot"
-        title: "Spring Boot"
-      -
-        id: "80-cs-spring-boot-basics"
-      -
-        id: "82-cs-spring-boot-adv"
-      -
-        id: "scs"
-        title: "Spring Cloud"
-      -
-        id: "config"
-      -
-        id: "service-discovery"
-      -
-        id: "circuit-breakers"
