--- a/application.yml
+++ b/application.yml
@@ -65,17 +65,22 @@ workshop:
         title: "Architecture and Process"
       -
         id: "a-new-way-of-working"
+        title: "A New Way of Working"
       -
         id: "an-open-ecosystem-of-services"
+        title: "An Open Ecosystem of Services"
       -
         id: "70-microservices"
+        title: "Microservices"
       -
         id: "data-microservices"
+        title: "Data Microservices"
       -
         id: "design"
         title: "Design Principles and Patterns"
       -
         id: "twelve-factor-apps"
+        title: "12 Factor Applications"
       -
         id: "implementation"
         title: "Accelerating Implementation"
@@ -87,33 +92,43 @@ workshop:
         title: "Spring Boot Lab Setup"
       -
         id: "80-cs-spring-boot-basics"
-        title: "Spring Boot Basics (really just the basics)"
+        title: "Spring Boot Basics"
       -
         id: "82-cs-spring-boot-adv"
+        title: "Spring Boot Advanced"
       -
         id: "actuator"
+        title: "Spring Boot Actuator"
       -
         id: "66-continuous-delivery"
+        title: "Continuous Delivery"
       -
         id: "pcf101-session1-cne"
+        title: "Pivotal Cloud Foundry"
       -
         id: "scs"
         title: "Spring Cloud Services"
       -
         id: "scs-labs-setup"
+        title: "Spring Cloud Services Lab Setup"
       -
         id: "config"
+        title: "Configuration Server"
       -
         id: "service-discovery"
+        title: "Service Discovery"
       -
         id: "circuit-breakers"
+        title: "Circuit Breakers"
       -
         id: "datamicroservices"
         title: "Data Microservices"
       -
         id: "springcloud-dataflow"
+        title: "Spring Cloud Data Flow"
       -
         id: "getting-started"
         title: "Getting Started"
       -
         id: "legacy-migration-to-cloud"
+        title: "Migrating Existing Applications"
