--- a/application.yml
+++ b/application.yml
@@ -88,18 +88,6 @@ workshop:
           id: "springboot"
           title: "Spring Boot"
         -
-          id: "spring-boot-labs-setup"
-          title: "Spring Boot Lab Setup"
-        -
-          id: "80-cs-spring-boot-basics"
-          title: "Spring Boot Basics"
-        -
-          id: "82-cs-spring-boot-adv"
-          title: "Spring Boot Advanced"
-        -
-          id: "actuator"
-          title: "Spring Boot Actuator"
-        -
           id: "66-continuous-delivery"
           title: "Continuous Delivery"
         -
@@ -137,6 +125,21 @@ workshop:
       name: "Labs for Self Study"
       description: "Lab exercises to get you started"
       topics:
+        -
+          id: "springboot"
+          title: "Spring Boot"
+        -
+          id: "spring-boot-labs-setup"
+          title: "Spring Boot Lab Setup"
+        -
+          id: "80-cs-spring-boot-basics"
+          title: "Spring Boot Basics"
+        -
+          id: "82-cs-spring-boot-adv"
+          title: "Spring Boot Advanced"
+        -
+          id: "actuator"
+          title: "Spring Boot Actuator"
         -
           id: "scs"
           title: "Spring Cloud Services"
