Added the copy from the agenda as the description

--- a/application.yml
+++ b/application.yml
@@ -5,16 +5,14 @@ workshop:
   contentURL: "https://workshop-content-crdant.cfapps.io"
   title: "Becoming Cloud Native"
   date: "December 12, 2016"
-  description: "<div class='h4'>
-  							Pivotal’s hands on workshops will introduce you to key concepts in modern application design with Pivotal Cloud Foundry, Spring Boot and Spring Cloud.
-  							With expert guidance, you will:
-  						</div>
-  						<ul>
-  							<li>Learn Pivotal Cloud Foundry concepts and deploy applications to cloud foundry and learn to employ DevOps practices such as shared responsibility, short iterations, and continuous delivery</li>
-  							<li>Cover the key operational topics you’ll need to know to confidently run your own microservice applications.</li>
-  							<li>Get a hands on introduction to microservice architectures and application development.</li>
-  							<li>Cover key concepts of architecting and running machine learning systems using Spring Cloud Data flow and Pivotal Cloud Foundry services.</li>
-  						</ul>"
+  description: "<p>This workshop is targeted primarily at application developers and their managers who feel that
+     something just isn’t working with the way they are working. If your group is producing applications or services that
+     run on the Internet or on our internal network, this session will teach you techniques to build and deploy faster
+     and deliver what you build more quickly.</p>
+
+     <p>We’ll steadily build the level of detail that we cover, providing opportunities for managers to learn about the
+     broader themes while leaving the code-level topics for their teams. When we get into the details, we’ll be focusing on
+     Java but touching on .NET and other languages as well.</p>"
   customerLogo: "http://brand.emc.com/dellbrand/wp-content/uploads/2016/05/DellEMC_Logo_Hz_Blue_Gry_rgb-500x89.png"
   instructors:
     -
