Added a live coding example to the agenda

--- a/application.yml
+++ b/application.yml
@@ -83,6 +83,9 @@ workshop:
           id: "data-microservices"
           title: "Data Microservices"
         -
+          id: "coming-soon"
+          title: "Live Coding!"
+        -
           id: "design"
           title: "Design Principles and Patterns"
         -
