Added some concept back into first segment

--- a/application.yml
+++ b/application.yml
@@ -81,6 +81,9 @@ workshop:
           title: "An Open Ecosystem of Services"
         -
           id: "coming-soon"
+          title: "Containers, Microservices, and Platforms"
+        -
+          id: "coming-soon"
           title: "Live Coding!"
         -
           id: "design"
