Renamed concept section in first segment to flow better

--- a/application.yml
+++ b/application.yml
@@ -81,7 +81,7 @@ workshop:
           title: "An Open Ecosystem of Services"
         -
           id: "coming-soon"
-          title: "Containers, Microservices, and Platforms"
+          title: "Cloud-Native Technologies: Platforms, Containers, and Microservices"
         -
           id: "coming-soon"
           title: "Live Coding!"
