Retitled technology section of first segment

--- a/application.yml
+++ b/application.yml
@@ -81,7 +81,7 @@ workshop:
           title: "An Open Ecosystem of Services"
         -
           id: "coming-soon"
-          title: "Core Technologies: Platforms, Containers, and Microservices"
+          title: "Key Technologies: Platforms, Containers, and Microservices"
         -
           id: "coming-soon"
           title: "Live Coding!"
