--- a/application.yml
+++ b/application.yml
@@ -92,7 +92,7 @@ workshop:
         id: "micro"
         title: "Continous Delivery and Cloud Native Apps"
       -
-        id: "66-continuous-delivery"
+        id: "66-continuous-delivery-ravi"
       -
         id: "68-cloud-native-design"
       -
