--- a/application.yml
+++ b/application.yml
@@ -72,7 +72,7 @@ workshop:
         title: "Platform Fundamentals, Developer experience"
       -
         id: "day1ambreak"
-        title: "Break 10:15 AM - 10:30 AM"
+        title: "Break"
       -
         id: "session2"
         title: "PCF Architecture and Operations"
@@ -82,13 +82,13 @@ workshop:
         id: "pcf101-session2a-oper"
       -
         id: "day1Lunch"
-        title: "Lunch 12:00 PM - 1:00 PM"
+        title: "Lunch"
       -
-        id: "pcf101-session3-services"
+        id: "nosession"
         title: "Pivotal Cloud Foundry Services"
       -
         id: "micro"
-        title: "Continous Delivery and Cloud Native Apps"
+        title: "Spring Boot and Spring Cloud"
       -
         id: "66-continuous-delivery-ravi"
       -
@@ -104,7 +104,7 @@ workshop:
         id: "60-security-and-sso"
       -
         id: "day1pmbreak"
-        title: "Break 3:30 PM - 3:45 PM"
+        title: "Break"
       -
         id: "day1open"
         title: "Open Discussions:"
