--- a/application.yml
+++ b/application.yml
@@ -136,38 +136,4 @@ workshop:
         id: "62-buildpacks"
       -
         id: "emptysession"
-        title: "COTS / ERP / Packaged Software"
-    - 
-      id: "day2"
-      name: "Day 2"
-      description: "Content for September, 9"
-      topics:
-      -
-        id: "session1"
-        title: "Application Development"
-      -
-        id: "04-cli"
-      -
-        id: "08-deploy-simple-app"
-      -
-        id: "06-org-space-user-role"
-      -
-        id: "10-application-manifest"
-      -
-        id: "12-domains-and-routes"
-      -
-        id: "springboot"
-        title: "Spring Boot"
-      -
-        id: "80-cs-spring-boot-basics"
-      -
-        id: "82-cs-spring-boot-adv"
-      -
-        id: "scs"
-        title: "Spring Cloud"
-      -
-        id: "config"
-      -
-        id: "service-discovery"
-      -
-        id: "circuit-breakers"
+        title: "Migrating Legacy Apps on PCF"
