--- a/application.yml
+++ b/application.yml
@@ -133,9 +133,11 @@ workshop:
       -
         id: "day1open"
         title: "Open Discussions:"
+       -
+        id: "emptysession"
+        title: "DevOps experience"
       -
         id: "56-cloud-controller-API"
-
       -
         id: "62-buildpacks"
       -
