--- a/application.yml
+++ b/application.yml
@@ -21,7 +21,7 @@ workshop:
     - 
       name: "Mark Fynes"
       title: "Advisory Platform Architect"
-      email: tfynesk@pivotal.io
+      email: tfynes@pivotal.io
   resources:
     -
       title: "Pivotal Network"
